두번째 커밋, 이것저것 많이 개선